--- a/intermediate-css/textsAndFonts/styles.css
+++ b/intermediate-css/textsAndFonts/styles.css
@@ -2,12 +2,33 @@
 p{
     font-family: Arial;
 }
+h1{
+    font-family: Fira Code;
+}
+
 /* font-sizes */
+h1{
+    font-size: 100px
+}
+p{
+    font-size: 10px;
+}
+span{
+    font-size: 2.0em;
+}
 
 /* font-weight */
+p{
+    font-weight: bold;
+}
 
 /* line-height */
+p{
+    line-height: 2;
+}
 
 /* text-align */
-
+h1{
+    text-align: right;
+}
 /* text-decoration */
