--- a/17-color-gane/styles.css
+++ b/17-color-gane/styles.css
@@ -1,9 +1,22 @@
 body{
-    background-color: #232323
+    background-color: #232323;
+    margin: 0;
+    font-family: "Avenir";
 }
 
 h1{
     color: white;
+    text-align: center;
+    background-color: steelblue;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.1;
+    padding: 20px 0;
+}
+
+#colorDisplay{
+    font-size: 200%;
 }
 
 #container{
@@ -16,7 +29,14 @@ h1{
     width: 30%;
     background:purple;
     float: left;
-    margin: 1.66%
+    margin: 1.66%;
+    border-radius: 10%;
+    transition: background-color 0.6s;
+}
+
+#message{
+    display: inline-block;
+    width: 20%;
 }
 
 #stripe{
@@ -25,3 +45,27 @@ h1{
     text-align: center;
     color: black;
 }
+
+.selected{
+    background-color: steelblue;
+    color:white;
+}
+
+button{
+    border: none;
+    background-color: none;
+    text-transform: uppercase;
+    font-family: "Avenir";
+    height: 100%;
+    font-weight: 900;
+    color:steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all .3s;
+}
+
+button:hover{
+    color:white;
+    background-color: steelblue;
+}
+button:focus {outline:0;}
