--- a/19-jQuery-todo/assets/css/todos.css
+++ b/19-jQuery-todo/assets/css/todos.css
@@ -1,41 +1,146 @@
-#container{
-    background-color: #ffffff;
-    width: 50%;
-    min-width: 360px;
-    margin: 100px auto;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+body {
+    background-color: #f6f6f6;
+    margin: 0;
+    height: 100%;
+    font-family: "Karla", sans-serif;
+    color:#4A4A4A;
 }
 
-h1{
-    background-color:#8aacc8;
+h1 {
     color:white;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-color: #3788ac;
+    font-weight: 700;
+    padding: 30px 0px;
+    margin: 0;
+    text-transform: uppercase;
+    padding-left: 19px;
+}
+
+ul {
+    padding: 0;
     margin: 0;
 }
 
-ul{
-    padding: 0;
-}
 
 li{
+    word-wrap: break-word;
+    line-height: 50px;
+    border-radius: 10px;
+    margin:18px 0;
+    height:3rem;
     background-color: white;
-    border-bottom: 1px solid #eceff1;
-    width:100%;
+    border: 2px solid #eceff1;
+    width: 100%;
     list-style: none;
-    transition: all 0.1s cubic-bezier(.25,.8,.25,1);
+    transition: all 0.99s cubic-bezier(0.25, 0.8, 0.25, 1);
+    font-size: 1.5rem;
 }
 
-li:last-child{
-    border-bottom: 0px;
+
+i{
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+
+#container {
+    background-color: #ffffff;
+    width: 33%;
+    min-width: 360px;
+    margin: 200px auto;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    position: absolute;
+    z-index: 1;
+}
+
+#subContainer {
+    width: 94%;
+    margin: 0 auto;
+}
+
+input[type="text"]{
+    box-sizing: border-box;
+    padding-left: 10px;
+    margin-top:18px;
+    border-radius: 10px;
+    height:5rem;
+    background-color: #EEEFF1;
+    border: 2px solid #eceff1;
+    width: 100%;
+    font-size: 1.5rem;
+    transition:  all 0.9s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+input[type="text"]:hover{
+    border: 2px solid #3788ac;
+}
+input[type="text"]:focus{
+    border: 2px solid #3788ac;
+    outline:none;
+}
+
+
+
+.trash{
+    color:white;
+    height: 40px;
+    text-align:center;
+    display: inline-block;
+    width:0;
+    opacity: 0;
+    line-height: 50px;
+}
+
+li input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+.checkmark{
+    height:100%;
+    text-align: center;
+    color:gray;
+    width:40px;
+    display: inline-block;
 }
 
 li:hover {
-    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.20);
-    transform: scale(1.03);
-  }
-
-.completed{
-    color:gray;
-    text-decoration:line-through;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transform: scale(1);
 }
 
+.checked{
+    color: #00c853;
+}
+
+.completed {
+    color: #D8D8D8;
+    text-decoration: line-through;
+}
+.header__bg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    background-color:#72cff8;
+    transform: skewY(-20deg);
+    transform-origin: top left;
+    z-index: 0;
+}
+
+.confirm{
+    width:40px;
+    color: #d8d8d8;
+    opacity: 1;
+}
