--- a/19-jQuery-todo/assets/css/todos.css
+++ b/19-jQuery-todo/assets/css/todos.css
@@ -58,16 +58,24 @@ button{
     border: 2px solid #eceff1;
     border-radius: 50%;
     width:65px;
+    max-width:18%;
     outline:none;
     padding:2px;
-    transition: all 0.9s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: box-shadow 0.9s cubic-bezier(0.25, 0.8, 0.25, 1);
     font-size: 1.5rem;
 }
 
 button:hover{
+    color:white;
+    background-color: #3788ac;
     border: 2px solid #3788ac;
     box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transform: scale(1);
+}
+
+button:active{
+    transition: .1s ease-in-out;
+    transform: scale(.95);
 }
 
 #container {
@@ -97,7 +105,7 @@ input[type="text"]{
     height:5rem;
     background-color: #EEEFF1;
     border: 2px solid #eceff1;
-    width: 86%;
+    width: 80%;
     font-size: 1.5rem;
     transition:  all 0.9s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
